--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,84 @@
+@import './components/GlobalStyles/GlobalStyles.scss';
+
 .App {
-  text-align: center;
+    text-align: center;
+    font-size: 1.5rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navigation {
+    background-color: $color-premeri;
+    height: $navbar-height;
+    color: $color-text;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-title {
+    width: 100%;
+    height: $header-height;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    h1 {
+        font-size: 4.8rem;
+        margin: 10px 0;
+    }
+    h6 {
+        font-size: 1.6rem;
+        font-weight: 400;
+        span {
+            background-color: $color-premeri;
+            color: $color-text;
+        }
+    }
 }
+.header-slideshow {
+    position: relative;
+    img {
+        width: 100%;
+        height: auto;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+        z-index: 1;
+    }
+    .title-slideshow {
+        position: absolute;
+        top: 50%;
+        left: 0%;
+        transform: translate(0%, -50%);
+        z-index: 2;
+        background-color: transparent;
+        padding: 12px 24px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        height: 264px;
+        line-height: 1.5;
+        font-weight: 500;
+        h2 {
+            font-size: 3.6rem;
+            color: $color-text;
+            letter-spacing: 4px;
+            padding-bottom: 12px;
+        }
+        h1 {
+            font-size: 6.4rem;
+            color: $color-text;
+            letter-spacing: 4px;
+        }
+        .sub-model {
+            background-color: $color-text;
+            color: $color-premeri;
+            font-size: 1.8rem;
+            width: 124px;
+            height: 50px;
+            text-align: center;
+            line-height: 50px;
+            font-family: 'Oswald';
+            opacity: 0.5;
+        }
+    }
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
