--- a/src/components/Navigation/style.scss
+++ b/src/components/Navigation/style.scss
@@ -103,7 +103,7 @@
                     width: 75%;
                 }
             }
-            button {
+            .search-btn {
                 height: 100%;
                 width: 46px;
                 background-color: transparent;
