add components card footer pagination tothetop

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -7,6 +7,7 @@ $color-text-h: #ccc;
 $color-button: #f44336;
 $color-hover: #ccc;
 $color-bg-text: #f1f1f1;
+$color-bg-ft: rgb(97, 97, 97);
 //height
 $header-height: 220px;
 $navbar-height: 40px;
