--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
     text-align: center;
     font-size: 1.5rem;
     position: relative;
+    background-color: $color-bg-text;
 }
 
 .header-title {
@@ -12,6 +13,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: $color-text;
     h1 {
         font-size: 4.8rem;
         margin: 10px 0;
@@ -65,4 +67,9 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    background-color: $color-bg-text;
+    margin: 16px;
+    .card-name {
+        background-color: $color-text;
+    }
 }
