--- a/src/components/Subsribe/style.scss
+++ b/src/components/Subsribe/style.scss
@@ -76,7 +76,7 @@
 .active-sub {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
 }
 .hidden {
     display: none;
