--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -77,8 +77,13 @@
             list-style-type: none;
             li {
                 display: flex;
+                margin-bottom: 10px;
                 align-items: center;
                 justify-content: left;
+                @media (max-width: 739px) {
+                    flex-direction: column;
+                    align-items: flex-start;
+                }
                 gap: 16px;
                 div {
                     max-height: 90px;
